[package]
name = "ordered-vector"
version = "0.1.2"
edition = "2021"
description = "Keep ordered vector of mutable elements"
authors = ["Victor Porton"]
repository = "https://github.com/vporton/ordered-vector-rs"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisection = "0.1.0"
